--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "thomasita";
+  src: url("./assets/fonts/Thomasita.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
