--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'mongolia';
+  src: url('@fonts/TKSouthMongolia-Regular.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
