refactor: Add font-face for 'beau-sans' in index.css and update language menu in navbar.tsx

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'beau-sans';
+  src: url('@fonts/BT-BeauSans-Regular.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
