refactor: separate language menu to a component

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: 'fot-tsukumin';
+  font-family: 'tsukumin';
   src: url('@fonts/FOT-TsukuMin Pro L.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
