--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@
 }
 
 @font-face {
-  font-family: 'beau-sans';
-  src: url('@fonts/BT-BeauSans-Regular.ttf') format('opentype');
+  font-family: 'jura';
+  src: url('@fonts/Jura-Medium.ttf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
