--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: 'jura';
-  src: url('@fonts/Jura-Medium.ttf') format('opentype');
+  src: url('@fonts/Jura-SemiBold.ttf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
